<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circular="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myPedometerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.mueller.mobileSports.pedometer.PedometerActivity">


    <LinearLayout
        android:id="@+id/PF_LayoutDateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:gravity="center">

        <TextView
            android:id="@+id/PF_DateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/emptyString"
            android:textSize="18sp"
            android:textStyle="normal|bold|italic"
            android:typeface="sans" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/circularprogressbar3"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dip"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/mySpinnerColor" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/cadence"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PF_CadenceView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/steps_s" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingTop="10dp"
                android:text="@string/speed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PF_SpeedView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/km_h" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingTop="10dp"
                android:text="@string/distance"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PF_DistanceView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/km" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingTop="10dp"
                android:text="@string/energy_expenditure"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PF_EnergyExpenditure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cal" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dip"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/mySpinnerColor" />

    </LinearLayout>

    <com.lylc.widget.circularprogressbar.CircularProgressBar
        android:id="@+id/circularprogressbar3"
        style="@style/Widget.ProgressBar.CircularProgressBar"
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        circular:cpb_title="Title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/PF_LayoutDateView"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>


</RelativeLayout>
