<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myHeartRateView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/bluetooth_status"
                android:textSize="18sp"
                android:textStyle="normal|bold" />


            <TextView
                android:id="@+id/HR_connectionStateView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/disconnected" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/to"
                android:textSize="18sp"
                android:textStyle="normal|bold" />


            <TextView
                android:id="@+id/HR_connectedDeviceName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/emptyString" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/HR_searchDeviceBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fcd0f9"
                android:onClick="onClickHeartRateActivity"
                android:text="@string/search_bluetooth_device" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/HR_disconnectDeviceBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fcd0f9"
                android:onClick="onClickHeartRateActivity"

                android:text="@string/disconnect_device" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fromDateTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:fontFamily="sans-serif"
                    android:text="@string/heart_rate2"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/HR_heartRateView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/emptyString"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/bpm"
                    android:textSize="12sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/mySpinnerColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:fontFamily="sans-serif"
                    android:text="@string/average"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/HR_averageHeartRateView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/emptyString"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/bpm"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:fontFamily="sans-serif"
                    android:text="@string/minimum"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/HR_minHeartRateView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/emptyString"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/bpm"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:fontFamily="sans-serif"
                    android:text="@string/maximum"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/HR_maxHeartRateView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/emptyString"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/bpm"
                    android:textSize="12sp" />

            </LinearLayout>


            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dip" />


        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <Button
            android:id="@+id/HR_startSessionBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#fcd0f9"
            android:onClick="onClickHeartRateActivity"
            android:text="@string/go_to_session" />


    </LinearLayout>

</RelativeLayout>
