<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myStatisticsView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.mueller.mobileSports.general.StatisticsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/choose_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/fDateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:background="#fcd0f9"
            android:onClick="setDate"
            android:text="@string/set_date" />


        <Button
            android:id="@+id/tDateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="110dp"
            android:background="#fcd0f9"
            android:onClick="setDate"
            android:text="@string/set_date2" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:layout_marginTop="63dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:layout_marginTop="120dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <android.support.v4.widget.Space
            android:id="@+id/mySpace2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/tDateBtn" />

        <LinearLayout
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mySpace2"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity" />

            <android.support.v4.widget.Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_drop_down_normal"
                android:entries="@array/activity_selector"
                android:popupBackground="@color/primary"
                android:textSize="25sp" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:id="@+id/mySpace"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/spinner" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/mySpace" />
    </RelativeLayout>

</ScrollView>